# Wallpaper_Sync_WithWinSpotlight

./: CMakeLists.txt  README.md  main.cpp
src/csdn/: copy_dir.cpp  copy_dir.h
src/yg/: Directory.cpp  Directory.h
